crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-ml-7.stderr
TOML parse error at line 1, column 25
  |
1 | bad-uni-esc-ml-7 = """\uabag"""
  |                         ^
invalid unicode 4-digit hex code
